clusters/common/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: multisite-ledger
  labels:
    app.kubernetes.io/part-of: multisite-ledger
