clusters/common/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ledger-web
spec:
  to:
    kind: Service
    name: ledger-web
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
